knife project is broken #110970

Closed
opened 2023-08-09 17:39:57 +02:00 by Kind-Latte-Man · 7 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: RTX3060(Notebook)

Blender Version
Broken: 4.0Alpha 5cdec2f12a, 2023-08-09
Worked: 3.30 - 3.61

Short description of error

The knife project tool seems to be broken.
If I use the knife project tool when I have an object like the screenshot, it doesn't work properly and looks like the second screenshot.
This is a screenshot from the top orthographic and running the function from the top perspective looks like the third screenshot.
It seems a bit better, but it's still weird.
This gets worse as you move away from the origin, and was good when the object was made of cubes.
It seems to be broken because it worked fine in the previous version.

Exact steps for others to reproduce the error
Create a plane and launch the knife project tool in the top orthographic view.
The coordinates of the plane are set to a position slightly away from 0,0,0.

**System Information** Operating system: Windows 10 64 bit Graphics card: RTX3060(Notebook) **Blender Version** Broken: 4.0Alpha 5cdec2f12ab0, 2023-08-09 Worked: 3.30 - 3.61 **Short description of error** The knife project tool seems to be broken. If I use the knife project tool when I have an object like the screenshot, it doesn't work properly and looks like the second screenshot. This is a screenshot from the top orthographic and running the function from the top perspective looks like the third screenshot. It seems a bit better, but it's still weird. This gets worse as you move away from the origin, and was good when the object was made of cubes. It seems to be broken because it worked fine in the previous version. **Exact steps for others to reproduce the error** Create a plane and launch the knife project tool in the top orthographic view. The coordinates of the plane are set to a position slightly away from 0,0,0.
125 KiB
53 KiB
67 KiB
Kind-Latte-Man added this to the 4.0 milestone 2023-08-09 17:39:57 +02:00
Kind-Latte-Man added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-09 17:39:57 +02:00
Kind-Latte-Man changed title from knife project to knife project is broken 2023-08-09 17:42:36 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-08-09 18:21:47 +02:00
Member

Hi @Kind-Latte-Man here from what I'm able to test it seems to work just fine under 4.0, could you give us this file you are having trouble with?

Also the image order (from the attachment order) should be 2 > 3 > 1 right?

Hi @Kind-Latte-Man here from what I'm able to test it seems to work just fine under 4.0, could you give us this file you are having trouble with? Also the image order (from the attachment order) should be 2 > 3 > 1 right?
YimingWu added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-08-10 05:32:58 +02:00
Author

I tried downloading the updated blender on 2023-08-10, but it does not work.
I uploaded the video and blender file.

I tried downloading the updated blender on 2023-08-10, but it does not work. I uploaded the video and blender file.
Member

Can confirm on latest 4.0 build. It's still working correctly up to 0701c65d93.

Can confirm on latest 4.0 build. It's still working correctly up to 0701c65d93a.
Author

I'm not good at English, so I don't know if I can convey the meaning well in the continuous contents.

It does not work properly with the updated version on August 10.

I downloaded the June 30 file and ran it, and it works fine.

I'm not good at English, so I don't know if I can convey the meaning well in the continuous contents. It does not work properly with the updated version on August 10. I downloaded the June 30 file and ran it, and it works fine.
105 KiB
Member

@Kind-Latte-Man No worries you don't need to do anything atm, we'll find out what exactly is wrong in the time frame. Thanks!

@Kind-Latte-Man No worries you don't need to do anything atm, we'll find out what exactly is wrong in the time frame. Thanks!
Author

Thanks!! I Trust

Thanks!! I Trust
Member

Caused by 5cdec2f12a cc @mano-wii

Caused by 5cdec2f12ab0efc90726bf6a08440d6cea0cdf1c cc @mano-wii
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-12 15:47:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110970
No description provided.