Fix #110970: knife project is broken

Error in 5cdec2f12a

`ED_view3d_win_to_segment_clipped` returns the ray_end directly.

The code was treating it as if it were a direction.